classes/JP/ac/osaka_u/shugo/demi/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package JP.ac.osaka_u.shugo.demi;

import java.util.*;
import java.math.*;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected JJTParserState jjtree = new JJTParserState();
    String fileName = "-";
    boolean inFunctionDefinition = false;

    void jjtreeOpenNodeScope(Node n) {
         Token t = getToken(1);
         ((SimpleNode) n).line = t.beginLine;
    }

    void jjtreeCloseNodeScope(Node n) {
    }

    private static String processEscape(String str) {
         StringBuffer buff = new StringBuffer();
         for (int i = 0; i < str.length(); i++) {
             char c = str.charAt(i);
             if (c == '\\') {
                 i++;
                 c = str.charAt(i);
                 switch (c) {
                 case 'n':
                     buff.append('\n');
                     break;
                 case 't':
                     buff.append('\t');
                     break;
                 case 'b':
                     buff.append('\b');
                     break;
                 case 'r':
                     buff.append('\r');
                     break;
                 case 'f':
                     buff.append('\f');
                     break;
                 case '\\':
                     buff.append('\\');
                     break;
                 case '\'':
                     buff.append('\'');
                     break;
                 case '"':
                     buff.append('"');
                     break;
                 default:
                     if (c >= '0' && c <= '7') {
                         StringBuffer tmp = new StringBuffer();
                         tmp.append(c);
                         for (int j = 0; j < 2; j++) {
                             if (i < str.length() - 1) {
                                 char ch = str.charAt(i + 1);
                                 if (ch >= '0' && ch <= '7') {
                                     tmp.append(ch);
                                     i++;
                                 } else {
                                     break;
                                 }
                             } else {
                                 break;
                             }
                         }
                         char ch =
                             (char) Integer.parseInt(new String(tmp), 8);
                         buff.append(ch);
                     } else {
                         buff.append(c);
                     }
                 }
             } else {
                 buff.append(c);
             }
         }
         return new String(buff);
    }

  final public String JavaIdentifier() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
      break;
    case DEF:
      t = jj_consume_token(DEF);
      break;
    case ELSIF:
      t = jj_consume_token(ELSIF);
      break;
    case END:
      t = jj_consume_token(END);
      break;
    case EXCEPTION:
      t = jj_consume_token(EXCEPTION);
      break;
    case IN:
      t = jj_consume_token(IN);
      break;
    case MODULE:
      t = jj_consume_token(MODULE);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public void CompilationUnit() throws ParseException {
    ExpressionList();
    jj_consume_token(0);
  }

  final public void ExpressionList() throws ParseException {
 /*@bgen(jjtree) ExpressionList */
  ASTExpressionList jjtn000 = new ASTExpressionList(this, JJTEXPRESSIONLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BREAK:
      case CLASS:
      case CONTINUE:
      case DEF:
      case EXCEPTION:
      case FALSE:
      case FOR:
      case IF:
      case IMPORT:
      case MODULE:
      case NEW:
      case NULL:
      case RETURN:
      case SYNCHRONIZED:
      case THIS:
      case THROW:
      case TRUE:
      case TRY:
      case WHILE:
      case DECIMAL_LITERAL:
      case HEX_LITERAL:
      case OCTAL_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
      case SYMBOL:
      case LPAREN:
      case LBRACE:
      case LBRACKET:
      case BANG:
      case TILDE:
      case COLON2:
      case PLUS:
      case MINUS:
      case SHARP:
      case INCR:
      case DECR:
        Expression();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        jj_consume_token(SEMICOLON);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BREAK:
        case CLASS:
        case CONTINUE:
        case DEF:
        case EXCEPTION:
        case FALSE:
        case FOR:
        case IF:
        case IMPORT:
        case MODULE:
        case NEW:
        case NULL:
        case RETURN:
        case SYNCHRONIZED:
        case THIS:
        case THROW:
        case TRUE:
        case TRY:
        case WHILE:
        case DECIMAL_LITERAL:
        case HEX_LITERAL:
        case OCTAL_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case IDENTIFIER:
        case SYMBOL:
        case LPAREN:
        case LBRACE:
        case LBRACKET:
        case BANG:
        case TILDE:
        case COLON2:
        case PLUS:
        case MINUS:
        case SHARP:
        case INCR:
        case DECR:
          Expression();
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPORT:
      Import();
      break;
    case BREAK:
      Break();
      break;
    case CONTINUE:
      Continue();
      break;
    case RETURN:
      Return();
      break;
    case THROW:
      Throw();
      break;
    case CLASS:
    case DEF:
    case EXCEPTION:
    case FALSE:
    case FOR:
    case IF:
    case MODULE:
    case NEW:
    case NULL:
    case SYNCHRONIZED:
    case THIS:
    case TRUE:
    case TRY:
    case WHILE:
    case DECIMAL_LITERAL:
    case HEX_LITERAL:
    case OCTAL_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case SYMBOL:
    case LPAREN:
    case LBRACE:
    case LBRACKET:
    case BANG:
    case TILDE:
    case COLON2:
    case PLUS:
    case MINUS:
    case SHARP:
    case INCR:
    case DECR:
      ConditionalOrExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
      case PLUSASSIGN:
      case MINUSASSIGN:
      case STARASSIGN:
      case SLASHASSIGN:
      case ANDASSIGN:
      case ORASSIGN:
      case XORASSIGN:
      case REMASSIGN:
      case LSHIFTASSIGN:
      case RSIGNEDSHIFTASSIGN:
      case RUNSIGNEDSHIFTASSIGN:
        Assignment();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Import() throws ParseException {
 /*@bgen(jjtree) Import */
  ASTImport jjtn000 = new ASTImport(this, JJTIMPORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(IMPORT);
      t = jj_consume_token(IDENTIFIER);
                     jjtn000.packageName = t.image;
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        jj_consume_token(DOT);
        t = jj_consume_token(IDENTIFIER);
         jjtn000.packageName += ".";
         jjtn000.packageName += t.image;
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void Break() throws ParseException {
 /*@bgen(jjtree) Break */
  ASTBreak jjtn000 = new ASTBreak(this, JJTBREAK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(BREAK);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void Continue() throws ParseException {
 /*@bgen(jjtree) Continue */
  ASTContinue jjtn000 = new ASTContinue(this, JJTCONTINUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(CONTINUE);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void Return() throws ParseException {
 /*@bgen(jjtree) Return */
  ASTReturn jjtn000 = new ASTReturn(this, JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(RETURN);
      if (!inFunctionDefinition) {
           {if (true) throw new ParseException("return appeared outside of function " +
                                    "at line " + t.beginLine +
                                    ", column " + t.beginColumn + ".");}
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BREAK:
      case CLASS:
      case CONTINUE:
      case DEF:
      case EXCEPTION:
      case FALSE:
      case FOR:
      case IF:
      case IMPORT:
      case MODULE:
      case NEW:
      case NULL:
      case RETURN:
      case SYNCHRONIZED:
      case THIS:
      case THROW:
      case TRUE:
      case TRY:
      case WHILE:
      case DECIMAL_LITERAL:
      case HEX_LITERAL:
      case OCTAL_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
      case SYMBOL:
      case LPAREN:
      case LBRACE:
      case LBRACKET:
      case BANG:
      case TILDE:
      case COLON2:
      case PLUS:
      case MINUS:
      case SHARP:
      case INCR:
      case DECR:
        Expression();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void Throw() throws ParseException {
 /*@bgen(jjtree) Throw */
  ASTThrow jjtn000 = new ASTThrow(this, JJTTHROW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(THROW);
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }
